2008-11-01  Philipp Sehmisch  <tmw@crushnet.org>

	* src/game.cpp, src7gui/menuwindow.cpp, src/gui/setup.cpp,
	src/gui/magic.cpp, src/gui/magic.h: Added very provisorical and
	hackish magic gui.
	* src/localplayer.cpp, src/localplayer.h,
	src/net/gameserver/player.cpp, src/net/gameserver/player.h,
	src/net/protocol.h: Added netcode for using special actions.

2008-11-01  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/openglgraphics.h, src/openglgraphics.cpp: Made an option around
	the syncing, but no way to change it for now.

2008-10-27  David Athay  <ko2fan@gmail.com>

	* src/commandhandler.cpp: Remove check command, now there is an NPC
	for checking for post.

2008-10-27  Chuck Miller  <shadowmil@gmail.com>

	* src/game.h, src/game.cpp, src/net/protocol.h, src/net/effecthandler.h,
	src/net/effecthandler.cpp: Added a handler for handling effects sent
	from the server, you'll need the latest server patch for them too work
	* src/effectmanager.cpp: Removed some debugging code left in by
	mistake.

2008-10-26  Chuck Miller  <shadowmil@gmail.com>

	* src/effectmanager.h,src/effectmanager.cpp,src/game.cpp: Added a
	effects manager that reads from effects.xml when created, and can
	tigger the effects when ever needed.  Like 0.0 does.

2008-10-26  Chuck Miller  <shadowmil@gmail.com>

	* src/net/beinghandler.cpp,src/localplayer.cpp,src/being.h: Played
	around more with movement.  I think later on all of movement will
	need to be revised.  But this should work for now.

2008-10-25  Roderic Morris  <roderic@ccs.neu.edu>

	* src/commandhandler.cpp: get rid of /admin commands (they're now
	@ commands).

2008-10-25  Chuck Miller  <shadowmil@gmail.com>

	* src/localplayer.h,src/localplayer.cpp,src/game.cpp: Played around
	with movement, its still not where it should be, but its quite a bit
	better.

2008-10-24  Chuck Miller  <shadowmil@gmail.com>

	* src/resources/iteminfo.h,src/resources/itemdb.cpp: Added attack
	range to item's info