@@ -80,6 +80,8 @@ tmw_SOURCES = gui/widgets/dropdown.cpp \
 	      gui/listbox.h \
 	      gui/login.cpp \
 	      gui/login.h \
+	      gui/magic.cpp \
+	      gui/magic.h \
 	      gui/menuwindow.cpp \
 	      gui/menuwindow.h \
 	      gui/minimap.cpp \
